# rustdoc

./: .dockerignore  .gitattributes  .gitignore  AcdAgrInfo_ImportSave.xsd  Directory.Build.props  ExportDocManager.Tests.runsettings  ExportDocManager.sln  NuGet.Config  README.md  coo.xsd  ef-migrations.ps1  version.json  使用说明.txt  单一窗口字段映射清单初稿.md  单一窗口对接代码级设计.md  模块级审查清单.md  程序改进文档.md  设计规划.md  软件更新功能说明文档.md
.github/: dependabot.yml
Browsers/: README.md
apps/export-doc-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/export-doc-tauri/src-tauri/capabilities/: main.json
apps/export-doc-tauri/src-tauri/icons/: icon.icns
apps/export-doc-tauri/src-tauri/nsis/: installer-hooks.nsh
apps/export-doc-tauri/src-tauri/permissions/: desktop-bridge.toml
apps/export-doc-tauri/src-tauri/src/: desktop_commands.rs  main.rs  runtime_layout.rs  runtime_paths.rs  sidecar.rs  tauri_updater_commands.rs  window.rs
apps/exportdoc-ocr-rs/: Cargo.toml  README.md
apps/exportdoc-ocr-rs/src/: main.rs
docs/: GitHub开源发布与Docker镜像说明.md  Windows构建脚本与前端多平台审查记录.md  产品架构与文档总览.md  全项目导出下载契约重构与多平台审查记录.md  商业化界面与装柜现场PDF重构记录.md  多平台Tauri重构可执行方案.md  多平台与多架构支持矩阵.md  字体许可与跨平台报表审查记录.md  审计日志维护交互重构与跨平台审查记录.md  报表模板多用户权限设计与实施记录.md  整体项目核查与程序改进重构规划-2026-07-23.md  新版报表设计器可执行方案.md  新版报表设计器进度参考文档.md  程序改进重构进度文档.md  运行目录与路径存储审查清单.md  默认报表模板与账号管理商业化复审记录.md
scripts/: README.md  assert-tauri-command-permissions.ps1  build-windows-desktop-run.cmd  build-windows-desktop-run.ps1  build-windows-editions.cmd  build-windows-editions.ps1  build-windows-installers.cmd  build-windows-installers.ps1  (+56 more)
(+1077 files in other folders)
