[package]
name = "exportdoc-ocr"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platform PP-OCRv6 ONNX sidecar for ExportDocManager"

[dependencies]
anyhow = "1.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff"] }
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
