[package]
name = "export-doc-tauri"
version = "0.1.1"
description = "ExportDocManager Tauri desktop shell"
authors = ["ExportDocManager"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
getrandom = "0.2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2.10.1"
url = "2"
